bugfix instant chat appearence for user and bugfix wierd names from bgg description

--- a/Main_Notebook.ipynb
+++ b/Main_Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2266,6 +2266,46 @@
     "\n",
     "name, description = get_game_details(game_id)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Unlock: Különös kalandok',\n",
+       " 'Unlock! Secret Adventures features three &quot;escape room&quot; scenarios that you can play on your tabletop.<br/><br/>Unlock! is a cooperative card game inspired by escape rooms that uses a simple system which allows you to search scenes, combine objects, and solve riddles. Play Unlock! to embark on great adventures, while seated at a table using only cards and a companion app that can provide clues, check codes, monitor time remaining, etc. The three scenarios are...<br/><br/><br/>    &quot;A Noside Story&quot;<br/>    &quot;Tombstone Express&quot;<br/>    &quot;The Adventurers of Oz&quot;<br/><br/><br/>')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def get_game_details(game_id):\n",
+    "    # Step 3: Use the ID to retrieve game details from the API\n",
+    "    api_url = f\"https://boardgamegeek.com/xmlapi/boardgame/{game_id}\"\n",
+    "    response = requests.get(api_url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.content, 'xml')\n",
+    "        # Extracting the description of the game\n",
+    "        name = soup.find('name').text\n",
+    "        description = soup.find('description').text\n",
+    "        return (name, description)\n",
+    "    else:\n",
+    "        print(\"Failed to retrieve game details.\")\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "get_game_details(239307)"
    ]
   },
   {
