Added ingestion page UI and X for chat deletion

--- a/Marker_pdf.ipynb
+++ b/Marker_pdf.ipynb
@@ -161,7 +161,7 @@
         "API_KEY=read_token_from_file(\"keys\\qdrant.txt\")\n",
         "# Specify the folder path\n",
         "# folder_path = \"C:\\\\Users\\\\fiori\\\\OneDrive\\\\Documenti\\\\Rulebooks\"\n",
-        "EMBEDDING_MODEL_NAME = \"thenlper/gte-small\""
+        "# EMBEDDING_MODEL_NAME = \"thenlper/gte-small\""
       ]
     },
     {
@@ -690,7 +690,7 @@
         "API_KEY=read_token_from_file(\"/content/qdrant.txt\")\n",
         "# Specify the folder path\n",
         "# folder_path = \"C:\\\\Users\\\\fiori\\\\OneDrive\\\\Documenti\\\\Rulebooks\"\n",
-        "EMBEDDING_MODEL_NAME = \"thenlper/gte-small\""
+        "# EMBEDDING_MODEL_NAME = \"thenlper/gte-small\""
       ]
     },
     {
