--- a/Marker_pdf.ipynb
+++ b/Marker_pdf.ipynb
@@ -121,9 +121,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\fiori\\OneDrive\\Documenti\\GitHub\\RAG_BGG\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from marker.converters.pdf import PdfConverter\n",
         "from marker.models import create_model_dict\n",
@@ -135,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -146,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -166,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -192,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -228,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -251,26 +260,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Recognizing layout: 100%|██████████| 3/3 [00:32<00:00, 10.94s/it]\n",
-            "Detecting bboxes: 0it [00:00, ?it/s]\n",
-            "Recognizing equations: 0it [00:00, ?it/s]\n",
-            "Recognizing tables: 100%|██████████| 3/3 [00:18<00:00,  6.27s/it]\n",
-            "Recognizing layout: 100%|██████████| 3/3 [00:29<00:00,  9.84s/it]\n",
-            "Detecting bboxes: 0it [00:00, ?it/s]\n",
-            "Recognizing equations: 0it [00:00, ?it/s]\n",
-            "Recognizing tables: 0it [00:00, ?it/s]\n",
-            "Recognizing layout: 100%|██████████| 1/1 [00:08<00:00,  8.73s/it]\n",
-            "Detecting bboxes: 0it [00:00, ?it/s]\n",
-            "Recognizing equations: 0it [00:00, ?it/s]\n",
-            "Recognizing tables: 0it [00:00, ?it/s]\n",
-            "Recognizing layout: 100%|██████████| 2/2 [00:14<00:00,  7.50s/it]\n",
+            "Recognizing layout: 100%|██████████| 5/5 [00:36<00:00,  7.35s/it]\n",
             "Detecting bboxes: 0it [00:00, ?it/s]\n",
             "Recognizing equations: 0it [00:00, ?it/s]\n",
             "Recognizing tables: 0it [00:00, ?it/s]\n"
@@ -329,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -357,9 +354,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\fiori\\AppData\\Local\\Temp\\ipykernel_6172\\316904853.py:8: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+            "  embedding_model = OpenAIEmbeddings(\n"
+          ]
+        }
+      ],
       "source": [
         "add_embeddings_to_qdrant(to_ingest, URL, API_KEY, os.environ[\"OPENAI_API_KEY\"], COLLECTION_NAME)"
       ]
